crates/hdk_derive/tests/hdk_extern/init_invalid_return.stderr
error: `init` must return `ExternResult<InitCallbackResult>`
 --> tests/hdk_extern/init_invalid_return.rs:4:14
  |
4 | fn init() -> String {
  |              ^^^^^^
