crates/hdk_derive/tests/hdk_extern/init_invalid_return.rs
use hdk_derive::*;

#[hdk_extern]
fn init() -> String {
    "hello".into()
}

fn main() {}
